--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -20,18 +20,12 @@ android {
     }
 }
 
-//Road runner
-repositories {
-    maven {
-        url = 'https://maven.brott.dev/'
-    }
-}
-
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
     //Road runner
-    implementation "com.acmerobotics.roadrunner:ftc:0.1.12"
-    implementation "com.acmerobotics.dashboard:dashboard:0.4.14"
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.6'
 }
